pbx-core/src/main/resources/k8s/templates/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-${INFRA_PREFIX}
  namespace: ${NAMESPACE}
  labels:
    app: kafka
    infra: ${INFRA_PREFIX}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      infra: ${INFRA_PREFIX}
  template:
    metadata:
      labels:
        app: kafka
        infra: ${INFRA_PREFIX}
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
              name: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-${INFRA_PREFIX}
  namespace: ${NAMESPACE}
  labels:
    app: kafka
    infra: ${INFRA_PREFIX}
spec:
  type: ClusterIP
  selector:
    app: kafka
    infra: ${INFRA_PREFIX}
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
