pbx-core/src/main/resources/k8s/templates/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-${INFRA_PREFIX}
  namespace: ${NAMESPACE}
  labels:
    app: redis
    infra: ${INFRA_PREFIX}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      infra: ${INFRA_PREFIX}
  template:
    metadata:
      labels:
        app: redis
        infra: ${INFRA_PREFIX}
    spec:
      containers:
        - name: redis
          image: bitnami/redis:latest
          ports:
            - containerPort: 6379
              name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-${INFRA_PREFIX}
  namespace: ${NAMESPACE}
  labels:
    app: redis
    infra: ${INFRA_PREFIX}
spec:
  type: ClusterIP
  selector:
    app: redis
    infra: ${INFRA_PREFIX}
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
